@@ -1,3 +1,4 @@
 Zope >= 2.7.0
 CMFCore
+CMFSetup
 CMFTopic
