@@ -21,6 +21,7 @@ from Products.CMFCore.utils import initializeBasesPhase2
 from Products.CMFCore.utils import ToolInit
 from Products.CMFCore.utils import ContentInit
 from Products.CMFCore.utils import registerIcon
+from Products.CMFSetup import profile_registry
 
 import utils
 from permissions import AddPortalContent
@@ -106,6 +107,12 @@ def initialize( context ):
                , extra_constructors=contentConstructors
                , fti=Portal.factory_type_information
                ).initialize( context )
+
+    profile_registry.registerProfile('default',
+                                     'CMFDefault Site',
+                                     'Profile for a default CMFSite.',
+                                     'profiles/default',
+                                     'CMFDefault')
 
     context.registerClass( Portal.CMFSite
                          , constructors=( Portal.manage_addCMFSiteForm
