@@ -2,7 +2,11 @@ HEAD only (unreleased)
 
   New Features
 
-    - CMFDefault: Added importVarious setup handler.
+    - profiles: Moved 'default' profile to CMFDefault.
+      Using the new 'importVarious' handler this profile now allows to create
+      CMF sites identical to those created with manage_addCMFSite.
+
+    - CMFDefault: Added 'importVarious' setup handler.
       This provisional handler will be removed again as soon as full handlers
       are implemented for these steps.
 
